--- a/app/package.json
+++ b/app/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "bootstrap": "^5.3.3",
+    "dotenv": "^16.4.5",
     "ejs": "^3.1.9",
     "express": "^4.19.2",
     "mysql": "^2.18.1",
+    "mysql2": "^3.10.3",
     "nodemon": "^3.1.4"
   },
   "bin": {
